calculation server has a name
